# job-tracker

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  config.yaml  jobs.db  pyproject.toml  resume.txt
.github/workflows/: ingest.yml  test.yml
output/: digest_2026-06-30.md  digest_2026-07-01.md  digest_2026-07-02.md  digest_2026-07-03.md  digest_2026-07-04.md  digest_2026-07-05.md  digest_2026-07-06.md  digest_2026-07-07.md  digest_2026-07-08.md  digest_2026-07-09.md  digest_2026-07-10.md  digest_2026-07-11.md  digest_2026-07-12.md  digest_2026-07-13.md  digest_2026-07-14.md  digest_2026-07-15.md  digest_2026-07-16.md  digest_2026-07-17.md  digest_2026-07-18.md  digest_2026-07-19.md  digest_2026-07-20.md  digest_2026-07-21.md  digest_2026-07-22.md  digest_2026-07-23.md  digest_2026-07-24.md
src/: agent.py  db.py  diff.py  digest.py  ingest.py  match.py  ui.py
src/adapters/: adzuna.py  greenhouse.py  jsearch.py  lever.py
tests/: test_adzuna.py  test_agent.py  test_diff.py  test_greenhouse.py  test_jsearch.py  test_lever.py  test_match.py
